Added CCPP target properties